<resources>
    <string name="app_name">MIBUDDY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_talk_now">Talk Now</string>
    <string name="title_community">Community</string>
    <string name="title_icons">Icons</string>
    <string name="title_me">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_keyword_hint">Search key words of questions</string>
    <string name="community_page_title">Bund visit anyone?</string>
    <string name="send">Send</string>
    <string name="travel">Travel</string>
    <string name="countries">Countries</string>
    <string name="night_life">Night Life</string>
    <string name="dating">Dating</string>
    <string name="studies">Studies</string>
    <string name="business">Business</string>
    <string name="dining">Dining</string>
    <string name="housing">Housing</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="signup_notice">By clicking Join now, you agree to MIBUDDY\'s User Agreement, Privacy Policy and Cookie Policy.</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="create_new_group">Create New Group</string>
    <string name="group_name">Group Name</string>
    <string name="title_of_chat_scene">Bund visit anyone?</string>
    <string name="field_username">Username</string>
    <string name="field_gender">Gender</string>
    <string name="field_age">Age</string>
    <string name="field_nationality">Nationality</string>
    <string name="field_language">Language</string>
    <string name="field_occupation">Occupation</string>
    <string name="field_areas">Areas</string>
    <string name="field_here_for">Here for</string>
    <string name="field_about_me">About me</string>
    <string name="hint_gender">Gender(Female or Male)</string>
    <string name="join_now">Join now</string>
    <string name="group_table_groups">Groups</string>
    <string name="group_table_leaders">Leaders</string>
    <string name="group_table_members">Members</string>
    <string name="join_this_group">Join this group</string>
    <string name="pinned_message">Pinned Message</string>
    <string name="hint_message">Type a message here</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="shopping">Shopping</string>
    <string name="booking">Booking</string>
    <string name="icons">Icons</string>
    <string name="culture">Culture</string>
    <string name="tips">Tips</string>
    <string name="emergency">Emergency</string>
    <string name="attractions">Attractions</string>
</resources>
