<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_talk_now"
        android:icon="@drawable/bottom_talknow"
        android:title="@string/title_talk_now" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/bottom_community"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_icons"
        android:icon="@drawable/bottom_icons"
        android:title="@string/title_icons" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/bottom_me"
        android:title="@string/title_me" />

</menu>
